Project Bug_tracker_system {
  database_type: 'MySQL'
}

Table projects {
  id int [pk, increment]
  owner_id int [ref: - users.id]
  category_id int [ref: - categories.id]
  status_id int [ref: - projects_status.id]
  code varchar(5) [not null]
  title varchar(150) [not null]
  description text
  created_at timestamp
  updated_at timestamp
}

Table users {
  id int [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [not null]
  email_verified_at timestamp
  password varchar(255) [not null]
  remember_token varchar(100)
  created_at timestamp
  updated_at timestamp
}

Table categories {
  id int [pk, increment]
  name varchar(150) [not null]
  created_at timestamp
  updated_at timestamp
}

Table projects_status {
  id int [pk, increment]
  name varcha(20) [not null]
}

Table tags {
  id int [pk, increment]
  name varchar(50) [not null]
  created_at timestamp
  updated_at timestamp
}

Table taggables {
  tag_id int [pk, ref: > tags.id]
  taggable_id int [not null]
  taggable_type varchar(256) [not null]
}

Table roles {
  id int [pk, increment]
  name varchar(100) [not null]
  label varchar(255)
  created_at timestamp
  updated_at timestamp
}

Table permissions {
  id int [pk, increment]
  name varchar(100) [not null]
  label varchar(255)
  created_at timestamp
  updated_at timestamp
}

Table permission_role {
  role_id int [ref: > roles.id]
  permission_id int [ref: > permissions.id]

  indexes {
    (role_id, permission_id) [pk]
  }
}

Table role_user {
  user_id int [ref: > users.id]
  role_id int [ref: > roles.id]

  indexes {
    (user_id, role_id) [pk]
  }
}

Table issues {
  id int [pk, increment]
  assignee_id int [ref: - users.id]
  code varchar(20) [not null]
  type issues_type
  status issues_status
  severity issues_severity
  title varchar(255) [not null]
  description text
  due_date datetime
  enviroment text
  created_at timestamp
  updated_at timestamp
}

enum issues_type {
  bug
  inprovement
  task
  new_feature
}

enum issues_status {
  open
  in_progress
  testing
  closed
}

enum issues_severity {
  none
  catastrophic
  critical
  major
  minor
}

Table tasks {
  id int [pk, increment]
  issue_id int [ref: > issues.id]
  assignee_id int [ref: - users.id]
  status tasks_status
  priority tasks_priority
  title varchar(255) [not null]
  description text
  created_at timestamp
  updated_at timestamp
}

enum tasks_status {
  to_do
  in_progress
  in_review
  done
}

enum tasks_priority {
  highest
  high
  medium
  low
  lowest
}

Table comments {
  id int [pk, increment]
  user_id int [ref: > users.id]
  commentable_id int [not null]
  commentable_type varchar(256) [not null]
  comment text
  created_at timestamp
  updated_at timestamp
}

Table attachments {
  id int [pk, increment]
  attachable_id int [not null]
  attachable_type varchar(256) [not null]
  file_name varchar(256) [not null]
  path text [not null]
  mime_type_id int [ref: - mime_types.id]
  created_at timestamp
  updated_at timestamp
}

Table mime_types {
  id int [pk, increment]
  extension varchar(10) [not null]
  type varchar(150) [not null]
}

Table activities {
  id int [pk, increment]
  user_id int [ref: - users.id]
  activitable_id int [not null]
  activitable_type varchar(255) [not null]
  type activities_types
  activity varchar(256) [not null]
  change text
  created_at timestamp
  updated_at timestamp
}

enum activities_types {
  created
  updated
  deleted
  assigned
  attached
  tagged
  commented
}